[gd_scene load_steps=19 format=3 uid="uid://dfrcxha4o3lrx"]

[ext_resource type="Script" uid="uid://c8nvuql0rfl4d" path="res://Assets/下城区/战斗场景/邪帽/小镰刀.gd" id="1_qpi6v"]
[ext_resource type="Script" uid="uid://di50f61cwnmcj" path="res://Assets/下城区/战斗场景/邪帽/小轨迹.gd" id="2_q6krv"]
[ext_resource type="Texture2D" uid="uid://com33m1b5khjl" path="res://Assets/下城区/战斗场景/邪帽/邪教组织4-Sheet.png" id="3_ad72i"]

[sub_resource type="Curve" id="Curve_carvw"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.331461, 0.105051), 0.484885, 0.484885, 0, 0, Vector2(0.685393, 0.407242), 1.17234, 1.17234, 0, 0, Vector2(1, 0.990683), 2.82116, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_q8npc"]
offsets = PackedFloat32Array(0, 0.627737, 1)
colors = PackedColorArray(0.888046, 7.41214e-06, 0.570732, 0, 1, 0.553546, 0.700026, 0.588235, 1, 0, 0.0500002, 0.745098)

[sub_resource type="AtlasTexture" id="AtlasTexture_4efst"]
atlas = ExtResource("3_ad72i")
region = Rect2(2100, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrdhm"]
atlas = ExtResource("3_ad72i")
region = Rect2(2800, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeno8"]
atlas = ExtResource("3_ad72i")
region = Rect2(3500, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_1opge"]
atlas = ExtResource("3_ad72i")
region = Rect2(0, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo7yo"]
atlas = ExtResource("3_ad72i")
region = Rect2(700, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mwkb"]
atlas = ExtResource("3_ad72i")
region = Rect2(1400, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o5uu"]
atlas = ExtResource("3_ad72i")
region = Rect2(4200, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_w53nw"]
atlas = ExtResource("3_ad72i")
region = Rect2(4900, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_veme0"]
atlas = ExtResource("3_ad72i")
region = Rect2(0, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nv1i"]
atlas = ExtResource("3_ad72i")
region = Rect2(700, 700, 700, 700)

[sub_resource type="SpriteFrames" id="SpriteFrames_707ic"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4efst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrdhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeno8")
}],
"loop": true,
"name": &"Spin",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1opge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo7yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mwkb")
}],
"loop": false,
"name": &"Start",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o5uu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w53nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_veme0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nv1i")
}],
"loop": false,
"name": &"Stop",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_r7rnn"]
radius = 29.0172

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xpkl8"]
size = Vector2(4737, 5331)

[node name="小镰刀" type="Area2D"]
script = ExtResource("1_qpi6v")

[node name="Node" type="Node" parent="."]

[node name="Line2D" type="Line2D" parent="Node"]
width = 40.0
width_curve = SubResource("Curve_carvw")
default_color = Color(0.372988, 0.261847, 0.295672, 1)
gradient = SubResource("Gradient_q8npc")
script = ExtResource("2_q6krv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -38)
sprite_frames = SubResource("SpriteFrames_707ic")
animation = &"Spin"
offset = Vector2(-100, -61)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -38)
shape = SubResource("CircleShape2D_r7rnn")

[node name="PlayerCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
shape = SubResource("RectangleShape2D_xpkl8")
debug_color = Color(0.633061, 0.476976, 0.620167, 0.12549)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
